test/Fail/NoIrrelevance2.agda
{-# OPTIONS --no-irrelevance #-}

postulate f : .(A : Set) → Set
